--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 click==7.1.2
+fastapi==0.63.0
+fastapi-utils==0.2.1
 Flask==1.1.2
+greenlet==1.0.0
+h11==0.12.0
 Inject==4.3.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 pyaes==1.6.1
 pyasn1==0.4.8
+pydantic==1.8.1
+PyJWT==2.0.1
+python-dotenv==0.15.0
 rsa==4.7.2
-Telethon==1.20
+SQLAlchemy==1.4.0
+starlette==0.13.6
+Telethon==1.21.1
+typing-extensions==3.7.4.3
+uvicorn==0.13.4
 Werkzeug==1.0.1
-PyJWT~=2.0.1
-python-dotenv~=0.15.0
