--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyasn1==0.4.8
 pydantic==1.8.1
 PyJWT==2.0.1
 python-dotenv==0.15.0
+pytz==2021.1
 rsa==4.7.2
 SQLAlchemy==1.4.0
 starlette==0.13.6
